modify status line entry for gtd script

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ set-option -g default-terminal screen-256color
 
 set-window-option -g mode-keys vi
 
+set-option -g status-right "#(cat /tmp/gtd-tmux) %a %m/%d %I:%M %P"
+
 #### COLOUR (Solarized light)
 
 # default statusbar colors
