--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -11,11 +11,28 @@
         {
             "name": "latexmk (lualatex)",
             "tools": [
-                "lualatexmk"
-            ]
+                "lualatexmk",
+            ],
+        },
+    ],
+	"latex-workshop.latex.tools": [
+        {
+            "name": "lualatexmk",
+            "command": "latexmk",
+            "args": [
+                "-synctex=1",
+                "-interaction=nonstopmode",
+                "-file-line-error",
+                "-lualatex",
+                "-outdir=%OUTDIR%",
+                "-shell-escape",
+                "%DOC%",
+            ],
         },
     ],
     "latex-workshop.view.pdf.viewer": "tab",
     "latex-workshop.latex.outDir": "build",
     "latex-workshop.latex.autoBuild.run": "onSave",
+    "workbench.startupEditor": "none",
+    "git.autofetch": true,
 }
