--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vim/pack/jrpear/opt/fzf"]
 	path = vim/pack/jrpear/opt/fzf
 	url = https://github.com/junegunn/fzf.git
+[submodule "vim/pack/jrpear/opt/nvim-lspconfig"]
+	path = vim/pack/jrpear/opt/nvim-lspconfig
+	url = https://github.com/neovim/nvim-lspconfig.git
