update VSCode config

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -36,4 +36,5 @@
     "security.workspace.trust.enabled": false,
     "editor.guides.indentation": false,
     "editor.guides.highlightActiveIndentation": false,
+    "git.confirmSync": false,
 }
